--- a/force-app/main/default/aura/TestdriveModalContent/TestdriveModalContent.css
+++ b/force-app/main/default/aura/TestdriveModalContent/TestdriveModalContent.css
@@ -115,3 +115,11 @@
 .THIS .fillHeight {
     height: 480px;
 }
+
+.THIS .smaller {
+    font-size: 80%;
+}
+
+.THIS .car-image{
+    height: 60px;
+}
