--- a/force-app/main/default/layouts/Lead-AutoForce.layout-meta.xml
+++ b/force-app/main/default/layouts/Lead-AutoForce.layout-meta.xml
@@ -25,6 +25,10 @@
                 <behavior>Edit</behavior>
                 <field>LeadSource</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Vehicle__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
