Improved trail assignment

--- a/force-app/main/default/pages/Assign_Trails.page
+++ b/force-app/main/default/pages/Assign_Trails.page
@@ -19,6 +19,27 @@
     <div class="slds-card__body slds-card__body_inner">
     <div class="slds-grid">
     <div class="slds-col slds-size_1-of-2">
+        <div class="demo-only slds-hidden" style="height: 4rem;" id='ToastMessage'>
+            <div class="slds-notify_container slds-is-relative">
+                <div class="slds-notify slds-notify_toast slds-theme_success" role="alert">
+                    <span class="slds-assistive-text">success</span>
+                    <span class="slds-icon_container slds-icon-utility-success slds-m-right_small slds-no-flex slds-align-top" title="Description of icon when needed">
+                        <svg class="slds-icon slds-icon_small" aria-hidden="true">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/utility-sprite/svg/symbols.svg#success')}" />
+                        </svg>
+                    </span>
+                    <div class="slds-notify__content">
+                        <h2 class="slds-text-heading_small ">Trail was succesfully assigned</h2>
+                    </div>
+                    <button class="slds-button slds-button_icon slds-notify__close slds-button_icon-inverse" title="Close" onclick='toastLaunch()'>
+                        <svg class="slds-button__icon slds-button__icon_large" aria-hidden="true">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/utility-sprite/svg/symbols.svg#close')}" />
+                        </svg>
+                        <span class="slds-assistive-text">Close</span>
+                    </button>
+                </div>
+            </div>
+        </div>
     <h2 id="message">Assign Trail</h2>
 
     <div class="slds-form-element">
@@ -175,6 +196,8 @@
     </div>
     </div>
     </article>
+
+  
     
     <script>
         //TODO call setTrailsMandatory function
@@ -239,11 +262,18 @@
                 console.log(result);
                 if (event.status) {
                     //yo do smth
+                    toastLaunch();
                 }
                 else {
                     console.log('Error: ', event.message);
                 }
             });
+        }
+
+
+        function toastLaunch(){
+            var element = document.getElementById("ToastMessage");
+            element.classList.toggle("slds-hidden");
         }
     </script>
 </apex:page>
