--- a/force-app/main/default/aura/DPFeed/DPFeed.css
+++ b/force-app/main/default/aura/DPFeed/DPFeed.css
@@ -18,7 +18,7 @@
 .THIS .feeditem {
     position: relative;
     box-sizing: border-box;
-    width: 740px;
+    /* width: 740px; */
     border-radius: 4px;
     margin: 20px;
     margin-bottom: 30px;
@@ -66,6 +66,8 @@
     align-items: flex-end;
     float: right;
 }
+
+
 .THIS .feeditem-action-background c-vw-button{
     margin-right: 10px;
 }
@@ -156,6 +158,8 @@
     border: 1px solid #dfe4e0;
     border-radius: 0 4px;
 }
+
+
 
 .THIS .feed-image-container {
     width: 258px;
@@ -374,7 +378,7 @@
 .THIS .modal960 {
     padding: 0px;
     width: 960px;
-    height: 740px;
+    height: 93%;
     margin-top: 32px;
 }
 
@@ -417,3 +421,15 @@
 .THIS .footer-model-wrapper{
     padding: 20px;
 }
+
+
+/* MEDIA Queries */
+
+@media  screen and (max-width: 1030px) {
+    .THIS .feeditem-action-background {
+        width: 94%;
+    }
+    .THIS .feeditem-main {
+        width: 94%;
+    }
+  }
