open contract modal for customised customer

--- a/force-app/main/default/aura/DPFeed/DPFeed.cmp
+++ b/force-app/main/default/aura/DPFeed/DPFeed.cmp
@@ -39,7 +39,7 @@
     
 	<!-- generic modal - will show upon event //-->
         <aura:if isTrue="{!v.showModal}">
-        <aura:if isTrue="{!v.modalContent == 'John Fisher'}">
+        <aura:if isTrue="{!v.modalContent == 'Contract'}">
            <c:TestDriveContract />
         </aura:if>
         <aura:if isTrue="{!v.modalContent == 'Testdrive'}">
